5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1674_1101.log
== SUBMITION (2019-04-25 12:19:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
		else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.176043
-- ERROR:
  File "/home/codebench/codes/1674/1101/main.py", line 10
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:19:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
		else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:19:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:20:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.134526
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:20:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:20:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:21:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.186328
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:24:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entrada:",c , "kwh", "tipo",t)
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entrada: -56.0 kwh tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:24:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entrada:",c , "kwh", "tipo",t)
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.203202
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 kwh tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 kwh tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:24:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entrada:",c , "kwh", "tipo",t)
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.159234
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 kwh tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 kwh tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:24:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entrada:",c , "kwh", "tipo",t)
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.130802
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 kwh tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 kwh tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:24:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entrada:",c , "kwh", "tipo",t)
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entrada: -56.0 kwh tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:25:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entrada:",c , "kwh", "e", "tipo",t)
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:25:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entrada:",c , "kwh", "e", "tipo",t)
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.227013
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:27:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entrada:",c , "kwh", "e", "tipo",t)
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:28:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entrada:",c , "kwh", "e", "tipo",t)
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:29:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entrada:",c , "kwh", "e", "tipo",t)
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:29:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:29:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.157765
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:29:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.18296
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:30:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:30:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:32:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:34:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)
if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo , 2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 22:01:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo , 2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 22:01:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo , 2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.132337
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 22:01:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo , 2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 22:02:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo , 2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 22:03:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo , 2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:02:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "Kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$", round(consumo , 2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 Kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:05:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "Kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.121825
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 Kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 Kwh e tipo R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:05:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "Kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.230022
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 Kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 Kwh e tipo R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:05:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "Kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
else:
	print("Dados invalidos ")
-- EXECUTION TIME:
0.1201
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 Kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 Kwh e tipo R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:13:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "Kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
		else:
			consumo = c*0.60
			print("Valor total: R$ ", round(consumo,2))
else:
	print("Dados invalidos ")
-- EXECUTION TIME:
0.153606
-- ERROR:
  File "/home/codebench/codes/1674/1101/main.py", line 26
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:13:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "Kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
		else:
			consumo = c*0.60
			print("Valor total: R$ ", round(consumo,2))
else:
	print("Dados invalidos ")
-- EXECUTION TIME:
0.13662
-- ERROR:
  File "/home/codebench/codes/1674/1101/main.py", line 26
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:13:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "Kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$ ", round(consumo,2))
else:
	print("Dados invalidos ")
-- EXECUTION TIME:
0.182024
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 Kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 Kwh e tipo R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:13:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "Kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$ ", round(consumo,2))
else:
	print("Dados invalidos ")
-- EXECUTION TIME:
0.20876
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 Kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 Kwh e tipo R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:13:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "Kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$ ", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.172041
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 Kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 Kwh e tipo R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:13:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "Kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$ ", round(consumo,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 Kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:13:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "Kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$ ", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.27645
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 Kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 Kwh e tipo R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:09:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "Kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$ ", round(consumo,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 Kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:09:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "Kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$ ", round(consumo,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 Kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:10:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$ ", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.134807
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:10:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$ ", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.143961
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:10:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$ ", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.177466
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:10:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$ ", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.168822
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:10:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$ ", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.132469
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:10:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kwh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$ ", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.18862
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:10:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("Digite o consumo:"))
t = input("Digite a instalacao:").upper()
print("Entradas:",c , "kWh", "e", "tipo",t)

if (t=="R" and c >=0):
	if (c <=500.0):
		consumo = c *0.44
		print("Valor total: R$ ", round(consumo,2))
	else:
			consumo = c *0.65
			print("Valor total: R$ ", round(consumo,2))
elif (t=="I" and c>=0):
	if (c<=5000):
		consumo = c*0,55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0,60
		print("Valor total: R$ ", round(consumo , 2))
elif (t=="C" and c>=0):
	if (c<=1000):
		consumo = c*0.55
		print("Valor total: R$ ", round(consumo,2))
	else:
		consumo = c*0.60
		print("Valor total: R$ ", round(consumo,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.24884
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$  621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
